# session_poc

./: .gitignore  Cargo.toml  README.md
python/: test.py
session-logic/: Cargo.toml
session-logic/src/: lib.rs  logic.rs
session-res/: Cargo.toml
session-res/src/: main.rs
