[package]
name = "session-res"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

session-logic= { path = "../session-logic"}

actix-web = "4.3.1"
env_logger = "0.10.0"
log = "0.4.18"
serde = { version = "1.0.143", features = ["derive"] }
uuid = { version = "1.3.3", features = ["serde", "v4"] }
